InternexDev_Sandbox/src/objects/Payment_and_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Applied Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <referenceTo>Fees__c</referenceTo>
        <relationshipLabel>Payment and Fees</relationshipLabel>
        <relationshipName>Payment_and_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Line</label>
        <referenceTo>akritiv__Payment_Line__c</referenceTo>
        <relationshipLabel>Payment and Fees</relationshipLabel>
        <relationshipName>Payment_and_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment and Fee</label>
    <nameField>
        <displayFormat>PF-{00000}</displayFormat>
        <label>Payment and Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment_and_Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>